prusti-tests/tests/verify/ui/counterexamples/return.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/return.rs:6:11
   |
6  | #[ensures(false)]
   |           ^^^^^
   |
note: the error originates here
  --> $DIR/return.rs:7:1
   |
7  | / fn test1(x: i32) -> i32 {
8  | |     if x > 0 {
9  | |         return 3;
10 | |     }
11 | |     let y = 5 + x;
12 | |     y * 2
13 | | }
   | |_^
note: counterexample for "x"
        initial value: -1
        final value:   -1
  --> $DIR/return.rs:7:10
   |
7  | fn test1(x: i32) -> i32 {
   |          ^
note: counterexample for "y"
        final value:   4
  --> $DIR/return.rs:11:9
   |
11 |     let y = 5 + x;
   |         ^
note: counterexample for result
        final value:   8
  --> $DIR/return.rs:7:21
   |
7  | fn test1(x: i32) -> i32 {
   |                     ^^^

error: aborting due to previous error

